# project-S-S

./: .gitignore  GUIA.md  GUIA.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py
app/routers/: health.py
rir_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_placeholder.py
